[package]
name = "street_of_zombies"
version = "0.1.0"
authors = ["Jafie <fortun.axel@gmail.com>"]
edition = "2021"

[profile.release]
lto = "thin"
opt-level = 's'

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["wasm-bindgen"] }
instant = "0.1.12"
bevy = { version = "0.12", default-features = true, features = ["bevy_winit", "bevy_render", "bevy_gltf", "png", "bevy_sprite"] }
