[package]
name = "street_of_zombies"
version = "0.1.0"
authors = ["Jafie <fortun.axel@gmail.com>"]
edition = "2025"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
rand = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
instant = "0.1.12"
bevy = { version = "0.12", default-features = true, features = ["bevy_winit", "bevy_render", "bevy_gltf", "png", "bevy_sprite"] }
uuid = { version = "1", features = ["v4", "rng-getrandom"] }
